fixed layout bugs

--- a/src/views/sequence/Sequence.css
+++ b/src/views/sequence/Sequence.css
@@ -18,7 +18,8 @@
   display: block;
   font-size: 0.9375rem;
   font-weight: 600;
-  margin: 0 auto 2rem auto;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   text-decoration: underline;
 }
@@ -91,6 +92,12 @@
   margin-top: 2.1875rem;
   margin-left: 12rem;
   margin-right: 12rem;
+}
+
+@media only screen and (max-width: 992px) {
+  .btnAllLearningObjectives {
+    margin-bottom: 2rem;
+  }
 }
 
 @media only screen and (max-width: 768px) {
